# gelf-sender

./: .gitignore  AUTHORS  Makefile.in  README  configure  configure.ac
src/: Makefile.am  Makefile.in  gelf-sender.c  gelf-sender.h
